name:                openresty-le-manager
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/openresty-le-manager#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , servant >= 0.7.1
                     , servant-server >= 0.7.1
                     , servant-js >= 0.7.1
                     , aeson >= 0.11.2.0
                     , transformers >= 0.4.2.0
                     , text >= 1.2.2.1
                     , hedis >= 0.6.10
                     , bytestring >= 0.10.6.0
                     , time >= 1.5.0.1
  default-language:    Haskell2010

executable openresty-le-manager-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , openresty-le-manager
                     , servant-server >= 0.7.1
                     , wai >= 3.2.1.1
                     , warp >= 3.2.6
  default-language:    Haskell2010

test-suite openresty-le-manager-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , openresty-le-manager
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/openresty-le-manager
